# rust-http-lambda-example

./: Cargo.toml  Makefile  README.md  envrc.example
scripts/: deploy.sh  make.sh
src/: main.rs  request_get.json  request_post.json
