[package]
name = "rust-lambda-example"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_http = "0.6.1"
lambda_runtime = "0.6.1"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.3.3", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter"] }
serde = "1.0.136"
serde_json = "1.0.85"
